stuff works pretty well now