@@ -1,6 +1,5 @@
 package main.multiplayer;
 
-import main.Tetris;
 import main.gameHandler.MultiplayerGameHost;
 
 import java.io.IOException;
@@ -10,6 +9,7 @@ import java.net.SocketException;
 import java.net.UnknownHostException;
 import java.util.LinkedList;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Random;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ConcurrentHashMap;
@@ -17,7 +17,6 @@ import java.util.concurrent.atomic.AtomicBoolean;
 
 public class TetrisServer {
     private final ServerSocket serverSocket;
-    private final CompletableFuture<?> clientListener;
     private final Map<Integer, TetrisServerThread> serverThreads = new ConcurrentHashMap<>();
     private final LinkedList<Integer> activePlayers = new LinkedList<>();
     private final Random gen = new Random((int) (Math.random() * 1000));
@@ -25,23 +24,25 @@ public class TetrisServer {
     private int nextID = 1; //ID 0 = host
     private int playerCount = 1;
     private MultiplayerGameHost multiplayerGameHost;
+    private int hostRank = 0;
 
     private TetrisServer() throws IOException {
         serverSocket = new ServerSocket(0);
         System.out.println("HOSTING");
         System.out.println(InetAddress.getLocalHost().getHostAddress() + ":" + serverSocket.getLocalPort());
-        clientListener = CompletableFuture.runAsync(() -> {
+        CompletableFuture.runAsync(() -> {
             while (true) {
                 try {
+                    TetrisServerThread thread = new TetrisServerThread(serverSocket.accept(), nextID, playerCount + 1, this, running.get());
                     playerCount++;
-                    TetrisServerThread thread = new TetrisServerThread(serverSocket.accept(), nextID, playerCount, this, running.get());
                     thread.start();
+                    multiplayerGameHost.setPlayerCount(playerCount);
+                    serverThreads.values().forEach(t -> t.setPlayerCount(playerCount));
                     serverThreads.put(nextID, thread);
-                    //TODO tetris.setWaitingPlayers(playerCount);
                     nextID++;
                     System.out.println("CONNECTION");
                 } catch (SocketException ignored) {
-                    break;
+                    break; //Is thrown when the socket is closed.
                 } catch (IOException e) {
                     e.printStackTrace();
                     break;
@@ -60,37 +61,42 @@ public class TetrisServer {
         }
     }
 
-    protected synchronized void removeServerThread(int id) {
+    protected synchronized void removeServerThread(Integer id) {
         serverThreads.remove(id);
         activePlayers.remove(id);
         playerCount--;
-        //TODO tetris.setWaitingPlayers(playerCount);
+        multiplayerGameHost.setPlayerCount(playerCount);
+        serverThreads.values().forEach(t -> t.setPlayerCount(playerCount));
     }
 
     public synchronized void distributeLines(int senderID, int amount) {
-        int recieverID = activePlayers.get(gen.nextInt(activePlayers.size() - 1));
-        if (recieverID == senderID)
-            recieverID = activePlayers.getLast();
-        if (recieverID == 0)
-            ;//TODO host recieves
+        int receiverID = activePlayers.get(gen.nextInt(activePlayers.size() - 1));
+        if (receiverID == senderID)
+            receiverID = activePlayers.getLast();
+        if (receiverID == 0)
+            multiplayerGameHost.receiveLines(amount);
         else
-            serverThreads.get(recieverID).sendLines(amount);
+            serverThreads.get(receiverID).sendLines(amount);
     }
 
-    public synchronized void removeActivePlayer(int id) {
+    public synchronized void removeActivePlayer(Integer id) {
+        if (id == 0)
+            hostRank = activePlayers.size();
         activePlayers.remove(id);
-        if (activePlayers.size() == 0)
+        if (activePlayers.size() == 0) {
             endGame(id);
+            return;
+        }
+        activePlayers.stream().filter(i -> i != 0).forEach(i -> serverThreads.get(i).playerDied());
     }
 
     private void endGame(int winnerID) {
         running.set(false);
         serverThreads.values().forEach(t -> t.endGame(winnerID));
-         multiplayerGameHost.end();
+        multiplayerGameHost.end(winnerID);
     }
 
     public synchronized void startGame(int seed) {
-        //TODO do stuff
         activePlayers.add(0);
         activePlayers.addAll(serverThreads.keySet());
         running.set(true);
@@ -98,6 +104,7 @@ public class TetrisServer {
     }
 
     public void shutdown() {
+        running.set(false);
         serverThreads.values().forEach(TetrisServerThread::shutdown);
         serverThreads.clear();
         activePlayers.clear();
@@ -118,6 +125,10 @@ public class TetrisServer {
         } catch (UnknownHostException e) {
             return "unknown";
         }
+    }
+
+    public int getRank() {
+        return hostRank;
     }
 
     public void setMultiplayerGameHost(MultiplayerGameHost multiplayerGameHost) {
